<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<RelativeLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="125dp"
		android:gravity="center"
		android:layout_alignParentBottom="true"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:background="@drawable/layout_bg">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="51dp"
			android:layout_alignParentBottom="true"
			android:id="@+id/activitytoolsoundRelativeLayout1"
			android:gravity="center">

			<Button
				android:layout_width="50dp"
				android:layout_height="wrap_content"
				android:text="@string/back"
				android:id="@+id/button3"
				android:layout_alignParentBottom="true"
				android:textStyle="bold"/>

			<Button
				android:layout_width="50dp"
				android:layout_height="wrap_content"
				android:text="@string/rewind"
				android:id="@+id/button4"
				android:layout_alignTop="@+id/button3"
				android:layout_toRightOf="@id/button3"
				android:layout_alignParentBottom="true"
				android:textStyle="bold"/>

			<Button
				android:layout_width="50dp"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@id/button4"
				android:layout_alignParentBottom="true"
				android:text="@string/pause"
				android:id="@+id/button2"
				android:textStyle="bold"/>

			<Button
				android:layout_width="50dp"
				android:layout_height="wrap_content"
				android:text="@string/forward"
				android:id="@+id/button"
				android:layout_toRightOf="@id/button2"
				android:layout_alignParentBottom="true"
				android:textStyle="bold"/>

			<Button
				android:layout_width="50dp"
				android:layout_height="wrap_content"
				android:text="@string/next"
				android:layout_toRightOf="@id/button"
				android:layout_alignParentBottom="true"
				android:textStyle="bold"/>

		</RelativeLayout>

		<SeekBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/seekBar"
			android:layout_alignLeft="@+id/textview"
			android:layout_alignStart="@+id/textview"
			android:layout_alignRight="@+id/textview"
			android:layout_alignEnd="@+id/textview"
			android:layout_above="@id/activitytoolsoundRelativeLayout1"/>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_above="@+id/seekBar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="Small Text"
				android:id="@+id/textView2"
				android:textStyle="bold"/>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="Medium Text"
				android:id="@+id/textView4"
				android:layout_centerHorizontal="true"
				android:textStyle="bold"/>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="Small Text"
				android:id="@+id/textView3"
				android:layout_alignRight="@+id/button4"
				android:textStyle="bold"/>

		</LinearLayout>

	</RelativeLayout>

</RelativeLayout>

